--- a/style.css
+++ b/style.css
@@ -17,10 +17,23 @@ body{
     
     background: linear-gradient( #f7b733, #fc4a1a);
 }
+
+.forest-img{
+  position: relative;
+  z-index: -1;
+  width: 430px;
+  max-width: 430px;
+  border-radius: 30px;
+  border:  solid 2px;
+  height: 750px;
+  max-height: 750px;
+  /* filter: brightness(0.9); */
+}
+
 .main-box{
 
 box-shadow: -1px 15px 23px 20px #f7b733, 1px -15px 23px 20px #d42e11;
-        background-image: url(./Background.png);
+        /* background-image: url(./Background.png); */
     display: grid;
     grid-template-columns: 2px 95px 95px 95px 95px 2px;
   grid-template-rows: 100px 100px 400px 100px 15px;
@@ -42,14 +55,8 @@ box-shadow: -1px 15px 23px 20px #f7b733, 1px -15px 23px 20px #d42e11;
     top: 50%;
     left: 50%;
     border-radius: 30px;
-    border:  solid 2px;
+   
 }
-
-#drop-img{
-z-index: 1;
-
-}
-
 #hungerMeter {
 grid-area: content1;
 justify-self: center;
@@ -280,3 +287,60 @@ button:hover {
       transform: translate3d(4px, 0, 0);
     }
   }
+
+#splash {
+  position:absolute;
+  width: 150px;
+opacity: 0;
+z-index: 1;
+}
+  .splash{
+
+    animation: splash  4s linear  ;
+    animation-iteration-count:1;
+
+  }
+
+  @keyframes splash{
+    
+    15%{transform: translate(150px,   200px); opacity: 0;}
+    20%{transform: translate(150px,   200px); opacity: 1}
+    25%{transform: translate(150px,   200px); opacity: 0;}
+    30%{transform: translate(220px,   450px); opacity: 0}
+    35%{transform: translate(220px,   450px); opacity: 1}
+    40%{transform: translate(220px,   450px); opacity: 1}
+    45%{transform: translate(220px,   450px); opacity: 0}
+    50%{transform: translate(100px,   450px); opacity: 0}
+    55%{transform: translate(100px,   450px); opacity: 1}
+    60%{transform: translate(100px,   450px); opacity: 0}
+    65%{transform: translate(280px,   190px); opacity: 0}
+    70%{transform: translate(280px,   190px); opacity: 1}
+    75%{transform: translate(280px,   190px); opacity: 1}
+    80%{transform: translate(280px,   190px); opacity: 0}
+    85%{transform: translate(100px,   300px); opacity: 0;}
+    90%{transform: translate(100px,   300px); opacity: 0}
+    95%{transform: translate(100px,   300px); opacity: 1;}
+    100%{transform: translate(100px,   300px); opacity: 0}
+  }
+/* 
+
+  .splash{
+    position: absolute;
+    bottom: 100%;
+    width: 15px;
+    height: 120px;
+    pointer-events: none;
+    animation: drop 0.5s linear infinite;
+  }
+  
+  @keyframes drop {
+    0% {
+      transform: translateY(0vh);
+    }
+    75% {
+      transform: translateY(90vh);
+    }
+    100% {
+      transform: translateY(70vh);
+    }
+  } */
