--- a/style.css
+++ b/style.css
@@ -303,19 +303,19 @@ z-index: 1;
 
   @keyframes splash{
     
-    15%{transform: translate(150px,   200px); opacity: 0;}
+    15%{transform: translate(150px,   200px) scale(1,1); opacity: 0;}
     20%{transform: translate(150px,   200px); opacity: 1}
     25%{transform: translate(150px,   200px); opacity: 0;}
     30%{transform: translate(220px,   450px); opacity: 0}
-    35%{transform: translate(220px,   450px); opacity: 1}
-    40%{transform: translate(220px,   450px); opacity: 1}
+    35%{transform: translate(220px,   450px) scale(1,1); opacity: 1}
+    40%{transform: translate(220px,   450px) scale(1,1); opacity: 1}
     45%{transform: translate(220px,   450px); opacity: 0}
     50%{transform: translate(100px,   450px); opacity: 0}
-    55%{transform: translate(100px,   450px); opacity: 1}
+    55%{transform: translate(100px,   450px) scale(1,1); opacity: 1}
     60%{transform: translate(100px,   450px); opacity: 0}
     65%{transform: translate(280px,   190px); opacity: 0}
-    70%{transform: translate(280px,   190px); opacity: 1}
-    75%{transform: translate(280px,   190px); opacity: 1}
+    70%{transform: translate(280px,   190px) scale(1,1); opacity: 1}
+    75%{transform: translate(280px,   190px) scale(1,1); opacity: 1}
     80%{transform: translate(280px,   190px); opacity: 0}
     85%{transform: translate(100px,   300px); opacity: 0;}
     90%{transform: translate(100px,   300px); opacity: 0}
@@ -344,3 +344,17 @@ z-index: 1;
       transform: translateY(70vh);
     }
   } */
+
+
+.night{
+filter:brightness(0.1) ;
+    animation: night  4s linear  ;
+    animation-iteration-count:1;
+
+  }
+
+  @keyframes night{
+    
+    0%{filter: brightness(0.9);}
+    50%{filter: brightness(0.6);}
+    100%{filter: brightness(0.1);}}
